// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Computing Geometry correctly calculates bottom geometry 1`] = `
Object {
  "anchorPoint": Point {
    "x": 56,
    "y": 414,
  },
  "placement": "bottom",
  "tooltipOrigin": Point {
    "x": 0,
    "y": 422,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates bottom geometry 2`] = `
Object {
  "anchorPoint": Point {
    "x": 272,
    "y": 414,
  },
  "placement": "bottom",
  "tooltipOrigin": Point {
    "x": 197,
    "y": 432,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates bottom geometry 3`] = `
Object {
  "anchorPoint": Point {
    "x": 99,
    "y": 235,
  },
  "placement": "bottom",
  "tooltipOrigin": Point {
    "x": 0,
    "y": 243,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates left geometry 1`] = `
Object {
  "anchorPoint": Point {
    "x": 24,
    "y": 382,
  },
  "placement": "left",
  "tooltipOrigin": Point {
    "x": -192,
    "y": 332,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates left geometry 2`] = `
Object {
  "anchorPoint": Point {
    "x": 240,
    "y": 382,
  },
  "placement": "left",
  "tooltipOrigin": Point {
    "x": 83,
    "y": 282,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates left geometry 3`] = `
Object {
  "anchorPoint": Point {
    "x": 24,
    "y": 135,
  },
  "placement": "left",
  "tooltipOrigin": Point {
    "x": -292,
    "y": 0,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates right geometry 1`] = `
Object {
  "anchorPoint": Point {
    "x": 88,
    "y": 382,
  },
  "placement": "right",
  "tooltipOrigin": Point {
    "x": 104,
    "y": 332,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates right geometry 2`] = `
Object {
  "anchorPoint": Point {
    "x": 304,
    "y": 382,
  },
  "placement": "right",
  "tooltipOrigin": Point {
    "x": 311,
    "y": 282,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates right geometry 3`] = `
Object {
  "anchorPoint": Point {
    "x": 174,
    "y": 135,
  },
  "placement": "right",
  "tooltipOrigin": Point {
    "x": 190,
    "y": 0,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates top geometry 1`] = `
Object {
  "anchorPoint": Point {
    "x": 56,
    "y": 350,
  },
  "placement": "top",
  "tooltipOrigin": Point {
    "x": 0,
    "y": 242,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates top geometry 2`] = `
Object {
  "anchorPoint": Point {
    "x": 272,
    "y": 350,
  },
  "placement": "top",
  "tooltipOrigin": Point {
    "x": 197,
    "y": 132,
  },
}
`;

exports[`Testing Computing Geometry correctly calculates top geometry 3`] = `
Object {
  "anchorPoint": Point {
    "x": 99,
    "y": 35,
  },
  "placement": "top",
  "tooltipOrigin": Point {
    "x": 0,
    "y": -473,
  },
}
`;
